# melee-decomp

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DECOMP_CLIENT_SUMMARY.md  README.md  configure.py  permuter_settings.toml  pyproject.toml
config/: scratches_slug_map.json
docker/: .gitignore  QUICKSTART.md  README.md  cleanup.sh  decomp.me.env  docker-compose.parallel.yml  docker-compose.yml  setup.sh  start-workers.sh  status.sh  stop-workers.sh
docs/: comparison-lukechampine-approach.md
examples/: client_usage.py
scripts/: analyze_pr_feedback.py  fetch_pr_feedback.py  verify_client.py
src/: __init__.py  cli.py  cli_legacy.py
src/agent/: __init__.py  llm.py  loop.py  models.py  prompts.py  source_reader.py  strategies.py
src/analytics/: __init__.py  decomp_analyzer.py
src/cli/: __init__.py  __main__.py  _common.py  analytics.py  api_helpers.py  audit.py  claim.py  commit.py  compilers.py  complete.py  docker.py  extract.py  hook.py  pr.py  scratch.py  setup.py  state.py  storage.py  struct.py  stub.py  sync.py  tracking.py  workflow.py  worktree.py  worktree_utils.py
src/client/: README.md  __init__.py  api.py  models.py  scratch.py
src/commit/: API.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  configure.py  diagnostics.py  example.py  format.py  pr.py  tests.py  update.py  workflow.py
src/db/: __init__.py  schema.py
src/dolphin_debug/: __init__.py  cli.py  daemon.py  debugger.py  launcher.py  melee_symbols.gdb  memory_client.py  poc.py  resign_dolphin.sh  rsp_client.py
src/extractor/: ARCHITECTURE.md  README.md  __init__.py  asm.py  context.py  example.py  extractor.py  models.py  parser.py  report.py  splits.py  symbols.py
src/hooks/: __init__.py  c_analyzer.py  validate_commit.py
tests/: __init__.py  test_cli.py  test_client.py  test_commit.py  test_common.py  test_db.py  test_extractor.py  test_scratch.py  test_strip_inline.py
tests/e2e/: __init__.py  conftest.py  test_audit_trail.py  test_claim_coordination.py  test_commit_apply.py  test_multi_agent_claims.py  test_scratch_operations.py  (+6 more)
(+31 files in other folders)
